# QtGame_PLAYHOOK

./: CMakeLists.txt  GameManager.cpp  GameManager.h  Player.cpp  Player.h  README.md  gameinstruction.cpp  gameinstruction.h  gameinstruction.ui  global.cpp  global.h  main.cpp  mainmenu.cpp  mainmenu.h  mainmenu.ui  platform.cpp  platform.h  resources.qrc  rope.cpp  rope.h  tool.cpp  tool.h  widget.cpp  widget.h  widget.ui  wintime.cpp  wintime.h  wintime.ui  wintime_dl.cpp  wintime_dl.h  wintime_dl.ui
data/: Col_Data_C.txt  Col_Data_D.txt
